Add publish to Maven Central

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,7 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Dorg.gradle.parallel.intra=true
 org.gradle.workers.max=4
 org.gradle.daemon=true
+
+# For deployment only
+ossrhUsername=DUMMY
+ossrhPassword=DUMMY
